<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray_background"
    android:padding="20dp">


    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_your_full_name"
        android:textColorHint="@color/hint_gray"
        android:textSize="@dimen/textButtonSize"
        android:padding="@dimen/textsPaddingValue" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/hint_gray"
        android:textSize="@dimen/textButtonSize"
        android:padding="@dimen/textsPaddingValue" />


    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_your_phone_number"
        android:textColorHint="@color/hint_gray"
        android:textSize="@dimen/textButtonSize"
        android:padding="@dimen/textsPaddingValue" />


    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_your_full_address"
        android:textColorHint="@color/hint_gray"
        android:textSize="@dimen/textButtonSize"
        android:padding="@dimen/textsPaddingValue" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_password"
        android:textColorHint="@color/hint_gray"
        android:textSize="@dimen/textButtonSize"
        android:padding="@dimen/textsPaddingValue" />

    <Spinner
        android:id="@+id/sp_specialty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SpinnerTextViewItem"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_background_with_arrow"
        android:padding="12dp"
        android:textAlignment="center"
        android:entries="@array/specialty_list" />

    <TextView
        android:id="@+id/tv_upload_certifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_upload_certifications"
        android:textSize="20sp"
        android:textColor="@color/blue_button"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
       android:layout_gravity="center" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upload"
        android:backgroundTint="@color/transparent"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@drawable/blue_upload_icon"
        android:textStyle="bold"
        android:textColor="@color/blue_button"
        android:textSize="@dimen/textButtonSize"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:strokeColor="@color/blue_button"
        app:strokeWidth="4dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/blue_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/textButtonSize"
        android:padding="@dimen/textsPaddingValue" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="0dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already a member? Log in now!"
            android:textColor="@color/hint_gray"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:padding="0dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in"
            app:cornerRadius="16dp"
            android:layout_gravity="end|bottom"
            app:backgroundTint="#000051"
            android:textColor="@android:color/white"
            android:layout_margin="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />
    </FrameLayout>


</LinearLayout>
